--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^1.0",
+        "intervention/image": "^3.11",
         "laravel/cashier": "^15.6",
         "laravel/framework": "^11.31",
         "laravel/jetstream": "^5.3",
