--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@headlessui/vue": "^1.7.23",
+        "date-fns": "^4.1.0",
         "lucide-vue-next": "^0.469.0"
     }
 }
